# geno7PET

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
src/geno7pet/: __main__.py  geno7PET.py
src/geno7pet/resources/: geno7PET_alleles  geno7PET_snps
src/geno7pet/resources/geno7PET_parameter_files/: classification_tree  data_for_FST_statistics_update2_3.10_V2_FST.txt  data_for_FST_statistics_update2_3.8_V2_FST.txt  data_for_FST_statistics_update2_3.9_V2_FST.txt  data_for_FST_statistics_update2_3_V2_FST.txt  data_for_FST_statistics_update2_5.20_V2_FST.txt  data_for_FST_statistics_update2_5.21_V2_FST.txt  data_for_FST_statistics_update2_5_V2_FST.txt  data_for_FST_statistics_update2_8_V2_FST.txt  data_for_FST_statistics_update2_T10_V2_FST.txt  data_for_FST_statistics_update2_T11_V2_FST.txt  data_for_FST_statistics_update2_T12_V2_FST.txt  data_for_FST_statistics_update2_T15_V2_FST.txt  data_for_FST_statistics_update2_T9_V2_FST.txt  data_for_FST_statistics_update2_baps5_2218201923_V2_FST.txt  data_for_FST_statistics_update2_baps5_5.201923_V2_FST.txt  data_for_FST_statistics_update2_wave1_V2_FST.txt  data_for_FST_statistics_update2_wave3_V2_FST.txt  snps_for_classifying
